
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct timeval {int tv_sec; scalar_t__ tv_usec; } ;
struct mntres {int status; } ;
struct mntrequest {char* path; char* map; char* name; char* opts; } ;
typedef int hostname ;
typedef enum clnt_stat { ____Placeholder_clnt_stat } clnt_stat ;
typedef int CLIENT ;


 int AUTOFS_MOUNT ;
 int AUTOFS_PROG ;
 int AUTOFS_VERS ;
 int AUTOTS ;
 int MAXHOSTNAMELEN ;
 int RPC_SUCCESS ;
 int clnt_call (int *,int ,int ,char*,int ,char*,struct timeval) ;
 int * clnt_create (char*,int ,int ,int ) ;
 int clnt_destroy (int *) ;
 int clnt_pcreateerror (char*) ;
 int clnt_perror (int *,char*) ;
 int exit (int ) ;
 int gethostname (char*,int) ;
 int perror (char*) ;
 int printf (char*,int) ;
 int usage (char*) ;
 int xdr_mntrequest ;
 int xdr_mntres ;

main(int argc, char *argv[]) {
char hostname[MAXHOSTNAMELEN];
CLIENT *cl;
enum clnt_stat stat;
struct timeval tm;
struct mntrequest req;
struct mntres result;

if (argc < 4)
usage(argv[0]);

req.path=argv[1];
req.map=argv[2];
req.name=argv[3];
req.opts=argv[4];
if (gethostname(hostname, sizeof(hostname)) == -1) {
perror("gethostname");
exit(0);
}
if ((cl=clnt_create(hostname, AUTOFS_PROG, AUTOFS_VERS, AUTOTS)) == ((void*)0)) {
clnt_pcreateerror("clnt_create");
exit(0);
}
tm.tv_sec=5;
tm.tv_usec=0;
stat=clnt_call(cl, AUTOFS_MOUNT, xdr_mntrequest, (char *)&req, xdr_mntres,
(char *)&result, tm);
if (stat != RPC_SUCCESS)
clnt_perror(cl, "mount call");
else
printf("mntres = %d.\n", result.status);
clnt_destroy(cl);
}
